--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/Gallery/public/style.css" />
+    <link rel="stylesheet" href="Gallery/public/style.css" />
     <title>Gallery</title>
   </head>
   <body>
@@ -20,6 +20,6 @@
     <nav>
       <ul></ul>
     </nav>
-    <script src="/Gallery/public/gallery.js"></script>
+    <script src="Gallery/public/gallery.js"></script>
   </body>
 </html>
